<resources>
    <string name="app_name">eContact</string>
    <string name="title_activity_teacher_register">TeacherRegisterActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="index_number_student">Index Number:</string>
    <string name="surname_student">Surname:</string>
    <string name="first_name_student">First Name:</string>
    <string name="email_student">Email PUT:</string>
    <string name="password_student">Password:</string>
    <string name="repeat_password_student">Repeat Password:</string>
    <string name="register_button_student">Register</string>
    <string name="login_button_student">Login</string>
    <string name="register_student_textview">Register Student</string>
    <string name="register_button_mainactivity">Register</string>
    <string name="pp_logo_main_activity">pp_logo_Main_Activity</string>
    <string name="login_button_mainactivity">Login</string>
    <string name="register_as_textview">Register As:</string>
    <string name="teacher_pp_button">Teacher PP</string>
    <string name="student_pp_button">Student PP</string>
    <string name="teacher_button_as">Teacher</string>
    <string name="student_button_as">Student</string>
    <string name="passwordone">Password:</string>
    <string name="email_put">Email PUT:</string>
    <string name="loginone">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in_account">Log in Account</string>
    <string name="next_step">Next step</string>
    <string name="surname_teacher">Surname Teacher:</string>
    <string name="search_for_a_tutor_in_the_database">Search for a tutor in the database:</string>
    <string name="first_name_teacher">First Name Teacher:</string>
    <string name="step_1_set_a_lecturer">Step 1 - Set a lecturer</string>
    <string name="check_department_of_the_lecturer">Check department of the lecturer</string>
    <string name="back_to_panel">Back to Panel</string>
    <string name="search_for_a_lecturer_in_the_econtact">Search for a lecturer in the eContact</string>
    <string name="give_the_faculty_of_the_lecturer">Give the faculty of the lecturer</string>
    <string name="title_activity_add_new_ticket_step_last">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="pending_tickets">Pending tickets</string>
    <string name="data_meeting">Data meeting:</string>
    <string name="lecturer_data">Lecturer data:</string>
    <string name="nameone">Name:</string>
    <string name="register_teacher">Register Teacher</string>
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="repeat_password">Repeat Password:</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="student_data_one">Student data:</string>
    <string name="accepted_tickets">Accepted Tickets</string>
    <string name="teacher_data">Teacher data:</string>
    <string name="confirm_tickets">Confirm tickets</string>
    <string name="checking_active_tickets_CheckNewTicket">Checking active tickets</string>
    <string name="student_data_CheckNewTicket">Student data:</string>
    <string name="todo_CheckNewTicket">TODO</string>
    <string name="cancel_ticket_CheckNewTicket">Cancel ticket</string>
    <string name="accept_ticket_CheckNewTicket">Accept ticket</string>
    <string name="ongoing_ticket_OngoingTicketStudent">Ongoing Ticket</string>
    <string name="first_teacher_OngoingTicketStudent">First Teacher</string>
    <string name="second_teacher_OngoingTicketStudent">Second teacher:</string>
    <string name="todo_OngoingTicketStudent">TODO</string>
    <string name="information_from_first_teacher_OngoingTicketStudent">Information from first teacher:</string>
    <string name="add_teacher_OngoingTicketStudent">Add teacher</string>
    <string name="information_from_second_teacher1_OngoingTicketStudent">Information from second teacher:</string>
    <string name="information_from_second_teacher2_OngoingTicketStudent">Information from second teacher:</string>
    <string name="todo_PanelTeacher">TODO</string>
    <string name="check_new_ticket_PanelTeacher">Check new ticket</string>
    <string name="accepted_tickets_PanelTeacher">Accepted Tickets</string>
    <string name="ongoing_tickets_PanelTeacher">Ongoing Tickets</string>
    <string name="settings_PanelTeacher">Settings</string>
    <string name="verify_now_PanelTeacher">VERIFY NOW</string>
    <string name="email_is_not_verified_PanelTeacher">Email is not verified!</string>
    <string name="logout_PanelTeacher">Logout</string>
    <string name="back_to_panel_teacher_SettlingsPanelTeacher">Back to Panel Teacher</string>
    <string name="reset_faculty_and_field_SettlingsPanelTeacher">Reset faculty and field</string>
    <string name="reset_password_SettlingsPanelTeacher">Reset password</string>
    <string name="settings_panel_SettlingsPanelTeacher">Settings Panel</string>
    <string name="back_to_settings_options_FacultyAndFiledStudent">Back to settings Options</string>
    <string name="reset_FacultyAndFiledStudent">Reset</string>
    <string name="settings_panel_FacultyAndFiledStudent">Settings Panel</string>
    <string name="set_new_faculty_FacultyAndFiledStudent">Set new faculty:</string>
    <string name="set_new_field_FacultyAndFiledStudent">Set new field:</string>
    <string name="reset_profile_picture_SettingsPanelStudent">Reset profile picture</string>
</resources>