<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:padding="20dp"
        tools:context=".PanelTeacher">

        <TextView
            android:id="@+id/textview_panelTeacher"
            style="@android:style/Widget.TextView"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:height="50dp"
            android:fontFamily="@font/cabin"
            android:gravity="center"
            android:orientation="horizontal"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="30sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView_PanelTeacher"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_panelTeacher"
            app:srcCompat="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/todo_PanelTeacher" />

        <Button
            android:id="@+id/checkNewTicket_panelTeacher"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_button"
            android:drawableStart="@android:drawable/btn_star"
            android:fontFamily="@font/cabin"
            android:text="@string/check_new_ticket_PanelTeacher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_PanelTeacher" />

        <Button
            android:id="@+id/acceptedTickets_panelTeacher"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_button"
            android:drawableStart="@android:drawable/checkbox_on_background"
            android:fontFamily="@font/cabin"
            android:text="@string/accepted_tickets_PanelTeacher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkNewTicket_panelTeacher" />

        <Button
            android:id="@+id/ongoingTickets_panelTeacher2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_button"
            android:drawableStart="@android:drawable/presence_online"
            android:fontFamily="@font/cabin"
            android:text="@string/ongoing_tickets_PanelTeacher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/acceptedTickets_panelTeacher" />

        <Button
            android:id="@+id/settingsPanel_panelTeacher"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_button"
            android:drawableStart="@android:drawable/ic_lock_lock"
            android:fontFamily="@font/cabin"
            android:text="@string/settings_PanelTeacher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ongoingTickets_panelTeacher2" />

        <Button
            android:id="@+id/logoutButton_panelTeacher"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/cabin"
            android:text="@string/logout_PanelTeacher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsPanel_panelTeacher"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/verifyButton_panelTeacher"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/cabin"
            android:text="@string/verify_now_PanelTeacher"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verifyText_panelTeacher" />

        <TextView
            android:id="@+id/verifyText_panelTeacher"
            style="@style/Base.Widget.MaterialComponents.TextView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:width="50dp"
            android:fontFamily="@font/cabin"
            android:gravity="center"
            android:orientation="horizontal"
            android:text="@string/email_is_not_verified_PanelTeacher"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#00000000"
            android:textColorLink="#00000000"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoutButton_panelTeacher" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>


