<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:screenOrientation="portrait"
    android:background="@color/colorBackground"
    tools:context=".Login">

    <TextView
        android:id="@+id/forgotPassword_Login"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:height="30dp"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/forgot_password"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton_Login" />

    <EditText
        android:id="@+id/email_Login"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:height="40dp"
        android:background="@drawable/rounded_button"
        android:drawableStart="@android:drawable/sym_action_email"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:hint="@string/email_put"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="#707B7C"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_RegisterStudent" />

    <EditText
        android:id="@+id/password_Login"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:height="40dp"
        android:background="@drawable/rounded_button"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="#707B7C"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_Login" />

    <Button
        android:id="@+id/loginButton_Login"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:height="40dp"
        android:background="@drawable/rounded_button"
        android:enabled="true"
        android:fontFamily="@font/cabin"
        android:text="@string/login"
        android:typeface="normal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_Login" />

    <TextView
        android:id="@+id/textview_RegisterStudent"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:height="70dp"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/log_in_account"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>