<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".SettingsPanelTeacher">

    <Button
        android:id="@+id/resetPicture_SettingsPanelTeacher"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_button"
        android:bufferType="normal"
        android:fontFamily="@font/cabin"
        android:selectAllOnFocus="false"
        android:text="@string/reset_profile_picture_SettingsPanelStudent"
        android:textAlignment="center"
        android:textColor="#050000"
        android:textColorHighlight="#050000"
        android:textColorLink="#040000"
        android:textSize="14sp"
        android:typeface="normal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetFacultyAndField_settingsPanelTeacher" />


    <Button
        android:id="@+id/back_settingsPanelTeacher"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_button"
        android:bufferType="normal"
        android:fontFamily="@font/cabin"
        android:selectAllOnFocus="false"
        android:text="@string/back_to_panel_teacher_SettlingsPanelTeacher"
        android:textAlignment="center"
        android:textColor="#050000"
        android:textColorHighlight="#050000"
        android:textColorLink="#040000"
        android:textSize="14sp"
        android:typeface="normal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/resetPicture_SettingsPanelTeacher"
        app:layout_constraintVertical_bias="0.77" />

    <Button
        android:id="@+id/resetFacultyAndField_settingsPanelTeacher"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_button"
        android:bufferType="normal"
        android:fontFamily="@font/cabin"
        android:selectAllOnFocus="false"
        android:text="@string/reset_faculty_and_field_SettlingsPanelTeacher"
        android:textAlignment="center"
        android:textColor="#050000"
        android:textColorHighlight="#050000"
        android:textColorLink="#040000"
        android:textSize="14sp"
        android:typeface="normal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetPassword_settingPanelTeacher" />

    <Button
        android:id="@+id/resetPassword_settingPanelTeacher"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_button"
        android:bufferType="normal"
        android:fontFamily="@font/cabin"
        android:selectAllOnFocus="false"
        android:text="@string/reset_password_SettlingsPanelTeacher"
        android:textAlignment="center"
        android:textColor="#050000"
        android:textColorHighlight="#050000"
        android:textColorLink="#040000"
        android:textSize="14sp"
        android:typeface="normal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_settingPanel5" />

    <TextView
        android:id="@+id/textview_settingPanel5"
        style="@android:style/Widget.TextView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:height="50dp"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/settings_panel_SettlingsPanelTeacher"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>