<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ResetFacultyAndFiledStudent">

    <TextView
        android:id="@+id/textview_settingPanel10"
        style="@android:style/Widget.TextView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:height="50dp"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/set_new_field_FacultyAndFiledStudent"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerResetFacultyStudent_ResetFacultyAndFieldStudent" />

    <TextView
        android:id="@+id/textview_settingPanel9"
        style="@android:style/Widget.TextView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:height="50dp"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/set_new_faculty_FacultyAndFiledStudent"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_settingPanel3" />

    <Button
        android:id="@+id/back_ResetFacultyAndFieldStudent"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/cabin"
        android:text="@string/back_to_settings_options_FacultyAndFiledStudent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_ResetFacultyAndFieldStudent" />

    <Button
        android:id="@+id/reset_ResetFacultyAndFieldStudent"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/cabin"
        android:text="@string/reset_FacultyAndFiledStudent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetField_ResetFacultyAndFieldStudent" />

    <Spinner
        android:id="@+id/resetField_ResetFacultyAndFieldStudent"
        style="@style/Platform.Widget.AppCompat.Spinner"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_button"
        android:popupBackground="@color/common_google_signin_btn_text_dark_default"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_settingPanel10" />

    <Spinner
        android:id="@+id/spinnerResetFacultyStudent_ResetFacultyAndFieldStudent"
        style="@style/Platform.Widget.AppCompat.Spinner"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_button"
        android:popupBackground="@color/common_google_signin_btn_text_dark_default"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_settingPanel9" />

    <TextView
        android:id="@+id/textview_settingPanel3"
        style="@android:style/Widget.TextView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:height="50dp"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/settings_panel_FacultyAndFiledStudent"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>